@@ -1,5 +1,5 @@
 name="lacaml"
-version="3.0.25"
+version="3.0.26"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
