@@ -34,17 +34,8 @@
 
 /* $Id: lacaml_CZ_c.c,v 1.13 2006/01/18 15:03:39 mottl Exp $ */
 
-#include <caml/mlvalues.h>
-#include <caml/alloc.h>
-#include <caml/memory.h>
-#include <caml/fail.h>
-#include <caml/callback.h>
-#include <caml/bigarray.h>
-#include <caml/signals.h>
-
-#include "f2c.h"
-
 #include "lacaml_macros.h"
+#include "f2c.h"
 
 /*** BLAS-2 */
 
