@@ -31,17 +31,8 @@
 
 /* $Id: lacaml_SDCZ_c.c,v 1.16 2006/01/18 15:03:40 mottl Exp $ */
 
-#include <caml/mlvalues.h>
-#include <caml/alloc.h>
-#include <caml/memory.h>
-#include <caml/fail.h>
-#include <caml/callback.h>
-#include <caml/bigarray.h>
-#include <caml/signals.h>
-
-#include "f2c.h"
-
 #include "lacaml_macros.h"
+#include "f2c.h"
 
 /*** BLAS-1 */
 
