@@ -27,20 +27,10 @@
 
 /* $Id: mat_CZ_c.c,v 1.3 2005/03/22 16:18:06 mottl Exp $ */
 
-#include <caml/mlvalues.h>
-#include <caml/alloc.h>
-#include <caml/memory.h>
-#include <caml/fail.h>
-#include <caml/callback.h>
-#include <caml/bigarray.h>
-#include <caml/signals.h>
-
 #include <math.h>
-
-#include "f2c.h"
-
 #include "lacaml_macros.h"
 #include "lacaml_utils_c.h"
+#include "f2c.h"
 
 CAMLprim value LFUN(map_stub)(
   value vM, value vN,
