@@ -27,16 +27,8 @@
 
 /* $Id: vec_combine.c,v 1.13 2006/01/18 15:03:40 mottl Exp $ */
 
-#include <caml/mlvalues.h>
-#include <caml/alloc.h>
-#include <caml/memory.h>
-#include <caml/fail.h>
-#include <caml/callback.h>
-#include <caml/bigarray.h>
-
-#include "f2c.h"
-
 #include "lacaml_macros.h"
+#include "f2c.h"
 
 CAMLprim value NAME(
   value vN,
